# cross-platform-rust

./: .gitignore
basic/android/Greetings/app/: build.gradle
basic/android/Greetings/app/src/main/java/com/mozilla/greetings/: GreetingsActivity.java
basic/android/Greetings/app/src/main/java/com/test/: RootUtils.java
basic/android/Greetings/gradle/wrapper/: gradle-wrapper.properties
basic/android/GreetingsJNA/app/: build.gradle
basic/android/GreetingsJNA/app/src/main/: AndroidManifest.xml
basic/android/GreetingsJNA/app/src/main/java/com/mozilla/greetings/: GreetingsActivity.java
basic/android/GreetingsJNA/app/src/main/java/com/test/: JNA_ROOT.java  RootUtils.java
basic/cargo/: Cargo.toml
basic/cargo/src/: lib.rs
basic/ios/Greetings/Greetings.xcodeproj/: project.pbxproj
basic/root/: Cargo.toml  _build.rs
basic/root/src/: lib.rs
basic/root/src/meat-grinder/: const_general.rs  const_properties.rs
basic/rootjni/: Cargo.toml
basic/rootjni/src/: lib.rs
