[package]
name = "root"
version = "0.1.1"
authors = ["frmi <frmi@gft.com>"]
description = "Example static library project built for iOS"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[lib]
name = "root"
#crate-type = ["staticlib", "cdylib"]
crate-type = ["dylib"]

[build-dependencies]
#cc = "1.0"
